<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_open_img"
        android:orderInCategory="3"
        android:title="@string/menu_open"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_process_image"
        android:orderInCategory="2"
        android:title="@string/menu_cut"
        android:visible="false"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_take_photo"
        android:orderInCategory="4"
        android:title="@string/menu_photo"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_get_gallery"
        android:orderInCategory="1"
        android:title="@string/menu_gallery"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_get_color"
        android:orderInCategory="2"
        android:title="@string/menu_color"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_get_texture"
        android:orderInCategory="6"
        android:title="@string/menu_texture"
        android:visible="false"
        app:showAsAction="never" />
</menu>