<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WindowOnStart">

    <Button
        android:id="@+id/button_kotlin"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="39dp"
        android:background="@color/colorPrimary"
        android:onClick="openKotlin"
        android:text="@string/from_image"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_unity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button_unity"
        android:layout_width="250dp"
        android:layout_height="0dp"
        android:layout_marginBottom="136dp"
        android:background="@color/colorPrimary"
        android:onClick="openUnity"
        android:text="@string/live_ar"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_kotlin" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="162dp"
        android:contentDescription="@string/paintbrush"
        app:layout_constraintBottom_toTopOf="@+id/button_kotlin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/paintbrush_150x150" />

</androidx.constraintlayout.widget.ConstraintLayout>